# actividad1-mlops-openrate-equipo01

./: .gitignore  README.md  Team.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
data/: data_dictionary.md
data/raw/: .gitignore
models/: .gitignore
notebooks/: 01_generacion_dataset.ipynb
src/: generate_data.py  preprocess.py  train.py
